# BD2_Proyecto_1

./: .gitignore  CMakeLists.txt  Makefile  README.md  input.cpp  input.h  input.ui  main.cpp  parser.cpp  parser.h  randomfile.cpp  randomfile.h  record.cpp  record.h  statichashing.cpp  statichashing.h  transaction1.txt  transaction2.txt  transactions.cpp  transactions.h  ui.h
ui/: dialog.ui  input.cpp  input.h  input.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nuevointento.pro  test.csv  ui_input.h  ui_input.ui  ui_mainwindow.h
ui2/: dialog.ui  input.cpp  input.h  input.ui  main.cpp  mainwindow.cpp  ui_input.ui
